tests/negative/test_cast_eval_owning.orb
data Foo;

eval (fnc dropFoo (val:Foo::noDrop) () {});

data Foo {
    x:i32
}::((drop dropFoo));

fnc main () () {
    eval (sym f:Foo);
    eval (cast (Foo cn) f);
};